--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -88,28 +88,32 @@
                             <span role="button"
                                   i18n>Abgeschlossen</span>
                             <span *ngIf="taskSort && taskSort === 'submitted'">
-                                <svg *ngIf="taskOrder === 'asc'"
-                                     width="1em"
-                                     height="0.8em"
-                                     viewBox="0 1.2 16 16"
-                                     class="bi bi-arrow-up"
-                                     aria-hidden="true">
-                                    <path
-                                          d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
-                                </svg>
-                                <span class="sr-only"
-                                      i18n>Aufsteigend sortiert</span>
-                                <svg *ngIf="taskOrder === 'desc'"
-                                     width="1em"
-                                     height="0.8em"
-                                     viewBox="0 1.2 16 16"
-                                     class="bi bi-arrow-down"
-                                     aria-hidden="true">
-                                    <path
-                                          d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
-                                </svg>
-                                <span class="sr-only"
-                                      i18n>Absteigend sortiert</span>
+                                <span *ngIf="taskOrder === 'asc'">
+                                    <svg 
+                                        width="1em"
+                                        height="0.8em"
+                                        viewBox="0 1.2 16 16"
+                                        class="bi bi-arrow-up"
+                                        aria-hidden="true">
+                                        <path
+                                            d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
+                                    </svg>
+                                    <span class="sr-only"
+                                        i18n>Aufsteigend sortiert</span>
+                                </span>
+                                <span *ngIf="taskOrder === 'desc'">
+                                    <svg 
+                                        width="1em"
+                                        height="0.8em"
+                                        viewBox="0 1.2 16 16"
+                                        class="bi bi-arrow-down"
+                                        aria-hidden="true">
+                                        <path
+                                            d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
+                                    </svg>
+                                    <span class="sr-only"
+                                        i18n>Absteigend sortiert</span>
+                                </span>
                             </span>
                         </th>
                         <th scope="col"
@@ -118,28 +122,30 @@
                             <span role="button"
                                   i18n>Erstellt</span>
                             <span *ngIf="taskSort && taskSort === 'created'">
-                                <svg *ngIf="taskOrder === 'asc'"
-                                     width="1em"
-                                     height="0.8em"
-                                     viewBox="0 1.2 16 16"
-                                     class="bi bi-arrow-up"
-                                     aria-hidden="true">
-                                    <path
-                                          d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
-                                </svg>
-                                <span class="sr-only"
-                                      i18n>Aufsteigend sortiert</span>
-                                <svg *ngIf="taskOrder === 'desc'"
-                                     width="1em"
-                                     height="0.8em"
-                                     viewBox="0 1.2 16 16"
-                                     class="bi bi-arrow-down"
-                                     aria-hidden="true">
-                                    <path
-                                          d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
-                                </svg>
-                                <span class="sr-only"
-                                      i18n>Absteigend sortiert</span>
+                                <span *ngIf="taskOrder === 'asc'">
+                                    <svg width="1em"
+                                        height="0.8em"
+                                        viewBox="0 1.2 16 16"
+                                        class="bi bi-arrow-up"
+                                        aria-hidden="true">
+                                        <path
+                                            d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
+                                    </svg>
+                                    <span class="sr-only"
+                                        i18n>Aufsteigend sortiert</span>
+                                </span>
+                                <span *ngIf="taskOrder === 'desc'">
+                                    <svg width="1em"
+                                        height="0.8em"
+                                        viewBox="0 1.2 16 16"
+                                        class="bi bi-arrow-down"
+                                        aria-hidden="true">
+                                        <path
+                                            d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
+                                    </svg>
+                                    <span class="sr-only"
+                                        i18n>Absteigend sortiert</span>
+                                </span>
                             </span>
                         </th>
                     </tr>
@@ -256,28 +262,30 @@
                             <span role="button"
                                   i18n>ID</span>
                             <span *ngIf="formSort && formSort === 'id'">
-                                <svg *ngIf="formOrder === 'asc'"
-                                     width="1em"
-                                     height="0.8em"
-                                     viewBox="0 1.2 16 16"
-                                     class="bi bi-arrow-up"
-                                     aria-hidden="true">
-                                    <path
-                                          d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
-                                </svg>
-                                <span class="sr-only"
-                                      i18n>Aufsteigend sortiert</span>
-                                <svg *ngIf="formOrder === 'desc'"
-                                     width="1em"
-                                     height="0.8em"
-                                     viewBox="0 1.2 16 16"
-                                     class="bi bi-arrow-down"
-                                     aria-hidden="true">
-                                    <path
-                                          d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
-                                </svg>
-                                <span class="sr-only"
-                                      i18n>Absteigend sortiert</span>
+                                <span *ngIf="formOrder === 'asc'">
+                                    <svg width="1em"
+                                         height="0.8em"
+                                         viewBox="0 1.2 16 16"
+                                         class="bi bi-arrow-up"
+                                         aria-hidden="true">
+                                        <path
+                                            d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
+                                    </svg>
+                                    <span class="sr-only"
+                                        i18n>Aufsteigend sortiert</span>
+                                </span>
+                                <span *ngIf="formOrder === 'desc'">
+                                    <svg width="1em"
+                                         height="0.8em"
+                                         viewBox="0 1.2 16 16"
+                                         class="bi bi-arrow-down"
+                                         aria-hidden="true">
+                                        <path
+                                            d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
+                                    </svg>
+                                    <span class="sr-only"
+                                        i18n>Absteigend sortiert</span>
+                                </span>
                             </span>
                         </th>
                         <th scope="col"
@@ -286,28 +294,30 @@
                             <span role="button"
                                   i18n>Titel</span>
                             <span *ngIf="formSort && formSort === 'title'">
-                                <svg *ngIf="formOrder === 'asc'"
-                                     width="1em"
-                                     height="0.8em"
-                                     viewBox="0 1.2 16 16"
-                                     class="bi bi-arrow-up"
-                                     aria-hidden="true">
-                                    <path
-                                          d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
-                                </svg>
-                                <span class="sr-only" 
-                                      i18n>Aufsteigend sortiert</span>
-                                <svg *ngIf="formOrder === 'desc'"
-                                     width="1em"
-                                     height="0.8em"
-                                     viewBox="0 1.2 16 16"
-                                     class="bi bi-arrow-down"
-                                     aria-hidden="true">
-                                    <path
-                                          d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
-                                </svg>
-                                <span class="sr-only" 
-                                      i18n>Absteigend sortiert</span>
+                                <span *ngIf="formOrder === 'asc'">
+                                    <svg width="1em"
+                                         height="0.8em"
+                                         viewBox="0 1.2 16 16"
+                                         class="bi bi-arrow-up"
+                                         aria-hidden="true">
+                                        <path
+                                            d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
+                                    </svg>
+                                    <span class="sr-only" 
+                                        i18n>Aufsteigend sortiert</span>
+                                </span>
+                                <span *ngIf="formOrder === 'desc'">
+                                    <svg width="1em"
+                                         height="0.8em"
+                                         viewBox="0 1.2 16 16"
+                                         class="bi bi-arrow-down"
+                                         aria-hidden="true">
+                                        <path
+                                            d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
+                                    </svg>
+                                    <span class="sr-only" 
+                                        i18n>Absteigend sortiert</span>
+                                </span>
                             </span>
                         </th>
                         <th scope="col"
@@ -325,28 +335,30 @@
                             <span role="button"
                                   i18n>Erstellt</span>
                             <span *ngIf="formSort && formSort === 'created'">
-                                <svg *ngIf="formOrder === 'asc'"
-                                     width="1em"
-                                     height="0.8em"
-                                     viewBox="0 1.2 16 16"
-                                     class="bi bi-arrow-up"
-                                     aria-hidden="true">
-                                    <path
-                                          d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
-                                </svg>
-                                <span class="sr-only"
-                                      i18n>Aufsteigend sortiert</span>
-                                <svg *ngIf="formOrder === 'desc'"
-                                     width="1em"
-                                     height="0.8em"
-                                     viewBox="0 1.2 16 16"
-                                     class="bi bi-arrow-down"
-                                     aria-hidden="true">
-                                    <path
-                                          d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
-                                </svg>
-                                <span class="sr-only" 
-                                      i18n>Absteigend sortiert</span>
+                                <span *ngIf="formOrder === 'asc'">
+                                    <svg width="1em"
+                                        height="0.8em"
+                                        viewBox="0 1.2 16 16"
+                                        class="bi bi-arrow-up"
+                                        aria-hidden="true">
+                                        <path
+                                            d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
+                                    </svg>
+                                    <span class="sr-only"
+                                        i18n>Aufsteigend sortiert</span>
+                                </span>
+                                <span *ngIf="formOrder === 'desc'">
+                                    <svg width="1em"
+                                        height="0.8em"
+                                        viewBox="0 1.2 16 16"
+                                        class="bi bi-arrow-down"
+                                        aria-hidden="true">
+                                        <path
+                                            d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
+                                    </svg>
+                                    <span class="sr-only" 
+                                        i18n>Absteigend sortiert</span>
+                                </span>
                             </span>
                         </th>
                         <th scope="col"
