--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -39,71 +39,87 @@
 <!-- <div class="product-device-4 shadow-sm mx-auto d-none d-lg-block"></div>
     </div>
 </div> -->
-<div class="container-xl border-left border-right">
-    <div class="row pl-mm-5 pt-md-5 pr-md-0 pb-md-0 p-2">
+<div class="container-xl border">
+    <div class="row pl-md-5 pt-md-5 pr-md-0 pb-md-0 p-2">
         <div class="col-md-6 p-0">
-            <div class="image col-md-12 p-0">
-                <img class="img-fluid rounded"
-                     src="../../../assets/IMG_8355.JPG">
+            <div class="img1 col-md-12 p-0">
+                <!-- <img class="img-fluid rounded"
+                     src="../../../assets/IMG_4956_h.JPG"> -->
             </div>
         </div>
-        <div class="col-md-6 px-0 pl-md-5 pt-2">
+        <div class="col-md-6 px-0 pl-md-5 pt-2 pt-md-0">
             <div class="content col-md-12 text-dark p-5 rounded-left">
                 <a class="h2 btn-link text-dark font-weight-bold"
                    [routerLink]="['/bodenrichtwerte']"
                    i18n>BORIS.NI</a>
                 <p class="h6"
-                   i18n>Bodenrichtwertinformationssystem Niedersachsen</p>
+                   i18n>{{ 'Bodenrichtwertinformationssystem Niedersachsen' | hyphenate }}</p>
                 <p class="lead text-justify"
-                   i18n>Die Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte
-                    in Niedersachsen stellen interessierten Nutzern unter BORIS.NI Bodenrichtwerte für Bauland und
-                    für Flächen der Land- und Forstwirtschaft zur Verfügung.</p>
-                <!-- <input placeholder="Geben Sie einen Ort ein" style="margin-top: 200px;"> -->
+                   i18n>{{ 'Die Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte' +
+                    'in Niedersachsen stellen interessierten Nutzern unter BORIS.NI Bodenrichtwerte für Bauland und' +
+                    'für Flächen der Land- und Forstwirtschaft zur Verfügung.' | hyphenate }} </p>
+                <input placeholder="Geben Sie einen Ort ein">
             </div>
         </div>
     </div>
     <div class="row pr-md-5 pt-md-5 pl-md-0 pb-md-0 p-2">
-        <div class="col-md-9 p-0 pr-md-5 pt-2">
+        <div class="col-md-9 p-0 pr-md-5 pt-2 pt-md-0">
             <div class="content col-md-12 text-dark p-5 rounded-right">
                 <a class="h2 btn-link text-dark font-weight-bold"
                    [routerLink]="['/immobilienpreisindex']"
                    i18n>NIPIX</a>
                 <p class="h6"
-                   i18n>Niedersächsischer Immobilienpreisindex</p>
+                   i18n>{{ 'Niedersächsischer Immobilienpreisindex' | hyphenate }}</p>
                 <p class="lead text-justify"
-                   i18n>Zur Darstellung der Preisentwicklung von Eigenheimen (freistehende Ein- und Zweifamilienhäuser,
-                    Reihenhäuser und Doppelhaushälften) und Eigentumswohnungen leitet der Obere Gutachterausschuss einen
-                    „Niedersächsischen Immobilienpreisindex für Eigenheime und Eigentumswohnungen (NIPIX)“ ab. Die
-                    Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte.</p>
-                <!-- <input placeholder="Geben Sie einen Ort ein" style="margin-top: 200px;"> -->
+                   i18n>{{ 'Zur Darstellung der Preisentwicklung von Eigenheimen (freistehende Ein- und Zweifamilienhäuser,' +
+                    'Reihenhäuser und Doppelhaushälften) und Eigentumswohnungen leitet der Obere Gutachterausschuss einen' +
+                    '„Niedersächsischen Immobilienpreisindex für Eigenheime und Eigentumswohnungen (NIPIX)“ ab. Die' +
+                    'Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte.' | hyphenate }}</p>
             </div>
         </div>
         <div class="col-md-3 pr-md-0 pr-0 pl-0 order-md-last order-first">
-            <div class="image col-md-12 p-0">
-                <img class="img-fluid rounded"
-                     src="../../../assets/IMG_8355.JPG">
+            <div class="img1 col-md-12 p-0">
+                <!-- <img class="img-fluid rounded"
+                     src="../../../assets/IMG_8355.JPG"> -->
             </div>
         </div>
     </div>
     <div class="row pl-md-5 pt-md-5 pr-md-0 pb-md-0 p-2">
         <div class="col-md-3 pr-0 pl-md-0 pl-0">
-            <div class="image col-md-12 p-0">
-                <img class="img-fluid rounded"
-                     src="../../../assets/IMG_Fragebogen.webp">
+            <div class="img1 col-md-12 p-0">
+                <!-- <img class="img-fluid rounded"
+                     src="../../../assets/IMG_Fragebogen.webp"> -->
             </div>
         </div>
-        <div class="col-md-9 pr-md-0 pr-0 pl-md-5 pl-0 pt-2">
+        <div class="col-md-9 pr-md-0 pr-0 pl-md-5 pl-0 pt-2 pt-md-0">
             <div class="content col-md-12 text-dark p-5 rounded-left">
                 <a class="h2 btn-link text-dark font-weight-bold"
                    [routerLink]="['/immobilienpreisindex']"
                    i18n>Fragebogen-Online</a>
                 <p class="lead text-justify pt-3"
-                   i18n>Zur Darstellung der Preisentwicklung von Eigenheimen (freistehende Ein- und Zweifamilienhäuser,
-                    Reihenhäuser und Doppelhaushälften) und Eigentumswohnungen leitet der Obere Gutachterausschuss einen
-                    „Niedersächsischen Immobilienpreisindex für Eigenheime und Eigentumswohnungen (NIPIX)“ ab. Die
-                    Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte.</p>
-                <!-- <p>{{ 'Bodenrichtwertinformationssystem' | hyphenate }} -->
-                <!-- <input placeholder="Geben Sie einen Ort ein" style="margin-top: 200px;"> -->
+                   i18n>{{ 'Zur Darstellung der Preisentwicklung von Eigenheimen (freistehende Ein- und Zweifamilienhäuser,' +
+                   'Reihenhäuser und Doppelhaushälften) und Eigentumswohnungen leitet der Obere Gutachterausschuss einen' +
+                   '„Niedersächsischen Immobilienpreisindex für Eigenheime und Eigentumswohnungen (NIPIX)“ ab. Die' +
+                   'Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte.' | hyphenate }}</p>
+                <input class="w-mobile mr-2"
+                       placeholder="Formular PIN">
+                <button type="submit"
+                        class="btn btn-success"
+                        i18n-title
+                        title="Absenden">
+                    <svg width="1.5em"
+                         height="1.5em"
+                         viewBox="0 0 16 16"
+                         class="bi bi-play-fill align-top"
+                         fill="currentColor"
+                         xmlns="http://www.w3.org/2000/svg"
+                         aria-hidden="true">
+                        <path
+                              d="M11.596 8.697l-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z" />
+                    </svg>
+                    <span class="sr-only"
+                          i18n>Absenden</span>
+                </button>
             </div>
         </div>
     </div>
