--- a/power/src/app/static/start/start.component.scss
+++ b/power/src/app/static/start/start.component.scss
@@ -1,158 +1,174 @@
-.container {
-    max-width: 960px;
-}
+// .container {
+//     max-width: 960px;
+// }
 
-h1 {
-    font-size: 10px;
+// h2 {
+//     font-size: 10px;
 
-    @media (min-width: 768px) {
-        font-size: 12px;
-    }
+//     @media (min-width: 768px) {
+//         font-size: 12px;
+//     }
 
-    @media (min-width: 992px) {
-        font-size: 16px;
-    }
+//     @media (min-width: 992px) {
+//         font-size: 16px;
+//     }
 
-    @media (min-width: 1200px) {
-        font-size: 18px;
-    }
-}
+//     @media (min-width: 1200px) {
+//         font-size: 18px;
+//     }
+// }
 
-.site-header {
-    background-color: rgba(0, 0, 0, 0.85);
-    -webkit-backdrop-filter: saturate(180%) blur(20px);
-    backdrop-filter: saturate(180%) blur(20px);
-}
+// .site-header {
+//     background-color: rgba(0, 0, 0, 0.85);
+//     -webkit-backdrop-filter: saturate(180%) blur(20px);
+//     backdrop-filter: saturate(180%) blur(20px);
+// }
 
-.site-header a {
-    color: #999;
-    transition: ease-in-out color 0.15s;
-}
+// .site-header a {
+//     color: #999;
+//     transition: ease-in-out color 0.15s;
+// }
 
-.site-header a:hover {
-    color: #fff;
-    text-decoration: none;
-}
+// .site-header a:hover {
+//     color: #fff;
+//     text-decoration: none;
+// }
 
-.headline {
-    z-index: 1;
-}
+// .headline {
+//     z-index: 1;
+// }
 
-.product-device {
-    position: absolute;
-    right: 10%;
-    bottom: -30%;
-    width: 300px;
-    height: 540px;
-    background-color: #343a40 !important;
-    border-radius: 21px;
-    -webkit-transform: rotate(30deg);
-    transform: rotate(30deg);
-}
+// .product-device {
+//     position: absolute;
+//     right: 10%;
+//     bottom: -30%;
+//     width: 300px;
+//     height: 540px;
+//     background-color: #343a40 !important;
+//     border-radius: 21px;
+//     -webkit-transform: rotate(30deg);
+//     transform: rotate(30deg);
+// }
 
-.product-device::before {
-    position: absolute;
-    top: 10%;
-    right: 10px;
-    bottom: 10%;
-    left: 10px;
-    content: '';
-    background-image: url('~assets/IMG_B691C85D0356-1.webp');
-    background-size: 280px 540px;
-    background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 5px;
-}
+// .product-device::before {
+//     position: absolute;
+//     top: 10%;
+//     right: 10px;
+//     bottom: 10%;
+//     left: 10px;
+//     content: '';
+//     background-image: url('~assets/IMG_B691C85D0356-1.webp');
+//     background-size: 280px 540px;
+//     background-color: rgba(255, 255, 255, 0.1);
+//     border-radius: 5px;
+// }
 
-.product-device-2 {
-    top: -25%;
-    right: auto;
-    bottom: 0;
-    left: 5%;
-    background-color: #a7a7a7;
-}
+// .product-device-2 {
+//     top: -25%;
+//     right: auto;
+//     bottom: 0;
+//     left: 5%;
+//     background-color: #a7a7a7;
+// }
 
-.product-device-3 {
-    position: absolute;
-    left: 20%;
-    right: 0%;
-    bottom: -35%;
-    width: 300px;
-    height: 540px;
-    background-color: #343a40 !important;
-    border-radius: 21px;
-    -webkit-transform: rotate(-30deg);
-    transform: rotate(-30deg);
-}
+// .product-device-3 {
+//     position: absolute;
+//     left: 20%;
+//     right: 0%;
+//     bottom: -35%;
+//     width: 300px;
+//     height: 540px;
+//     background-color: #343a40 !important;
+//     border-radius: 21px;
+//     -webkit-transform: rotate(-30deg);
+//     transform: rotate(-30deg);
+// }
 
-.product-device-3::before {
-    position: absolute;
-    top: 10%;
-    right: 10px;
-    bottom: 10%;
-    left: 10px;
-    content: '';
-    background-image: url('~assets/IMG_Immobilienindex.webp');
-    background-size: 280px 490px;
-    background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 5px;
-}
+// .product-device-3::before {
+//     position: absolute;
+//     top: 10%;
+//     right: 10px;
+//     bottom: 10%;
+//     left: 10px;
+//     content: '';
+//     background-image: url('~assets/IMG_Immobilienindex.webp');
+//     background-size: 280px 490px;
+//     background-color: rgba(255, 255, 255, 0.1);
+//     border-radius: 5px;
+// }
 
-.product-device-4 {
-    position: absolute;
-    left: 0%;
-    right: 0%;
-    bottom: -35%;
-    width: 300px;
-    height: 540px;
-    background-color: #343a40 !important;
-    border-radius: 21px;
-    -webkit-transform: rotate(-30deg);
-    transform: rotate(-30deg);
-}
+// .product-device-4 {
+//     position: absolute;
+//     left: 0%;
+//     right: 0%;
+//     bottom: -35%;
+//     width: 300px;
+//     height: 540px;
+//     background-color: #343a40 !important;
+//     border-radius: 21px;
+//     -webkit-transform: rotate(-30deg);
+//     transform: rotate(-30deg);
+// }
 
-.product-device-4::before {
-    position: absolute;
-    top: 10%;
-    right: 10px;
-    bottom: 10%;
-    left: 10px;
-    content: '';
-    background-image: url('~assets/IMG_Fragebogen.webp');
-    background-size: 280px 490px;
-    background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 5px;
-}
+// .product-device-4::before {
+//     position: absolute;
+//     top: 10%;
+//     right: 10px;
+//     bottom: 10%;
+//     left: 10px;
+//     content: '';
+//     background-image: url('~assets/IMG_Fragebogen.webp');
+//     background-size: 280px 490px;
+//     background-color: rgba(255, 255, 255, 0.1);
+//     border-radius: 5px;
+// }
 
-.bodenrichtwerte {
-    position: relative;
-    top: 0%;
-    right: 0px;
-    bottom: 0%;
-    left: 10px;
-    content: '';
-    background-image: url('~assets/bodenrichtwerte.jpeg');
-    // background-size: 280px 280px;
-    background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 0px;
-}
+// .bodenrichtwerte {
+//     position: relative;
+//     top: 0%;
+//     right: 0px;
+//     bottom: 0%;
+//     left: 10px;
+//     content: '';
+//     background-image: url('~assets/bodenrichtwerte.jpeg');
+//     // background-size: 280px 280px;
+//     background-color: rgba(255, 255, 255, 0.1);
+//     border-radius: 0px;
+// }
 
-.flex-equal > * {
-    -ms-flex: 1;
-    flex: 1;
-}
+// .flex-equal > * {
+//     -ms-flex: 1;
+//     flex: 1;
+// }
 
-@media (min-width: 768px) {
-    .flex-md-equal > * {
-        -ms-flex: 1;
-        flex: 1;
-    }
-}
+// @media (min-width: 768px) {
+//     .flex-md-equal > * {
+//         -ms-flex: 1;
+//         flex: 1;
+//     }
+// }
 
-.overflow-hidden {
-    overflow: hidden;
-}
+// .overflow-hidden {
+//     overflow: hidden;
+// }
 
 .content {
     height: 100%;
     background-color: #e9ecef;
+}
+
+.img1 {
+    background-image: url('~assets/IMG_Dummy.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    display: block;
+    border-radius: 0.25rem;
+    height: 300px;
+}
+
+@media (min-width: 768px) {
+    .img1 {
+        height: 100%;
+    }
 }
